--- a/configure.in
+++ b/configure.in
@@ -2439,6 +2439,8 @@ AC_CONFIG_FILES([
    drd/Makefile
    drd/scripts/download-and-build-splash2
    drd/tests/Makefile
+   fitin/Makefile
+   fitin/tests/Makefile
    exp-bbv/Makefile
    exp-bbv/tests/Makefile
    exp-bbv/tests/x86/Makefile
