--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 autom4te.cache/
+Makefile
+*.log
+*.pc
+*.deps/
+cachegrind/cg_annotate
+cachegrind/cg_diff
+callgrind/callgrind_annotate
+callgrind/callgrind_control
+config.status
+coregrind/link_tool_exe_darwin
+coregrind/link_tool_exe_linux
+drd/scripts/download-and-build-splash2
+glibc-2.X.supp
+massif/ms_print
+stamp-h1
+
