--- a/fitin/tests/Rakefile
+++ b/fitin/tests/Rakefile
@@ -10,6 +10,8 @@ require "rake.config"
 
 $SUCCESS = 0
 
+task :default => :tests
+
 #------------------------------------------------------------------------------
 task :tests => [:build_tests] do
   test_data_records.each do |test|
@@ -111,18 +113,22 @@ end
 def build_test(test, time)
   link = false 
 
-  test["files"].each do |src|
-    if !time || File.atime(src) > time
-      sh "#{CC} #{CFLAGS} #{test["cflags"]} -c #{src} -o #{object_file(src)}"
-      link = true
+  begin
+    test["files"].each do |src|
+      if !time || File.atime(src) > time
+        sh "#{CC} #{CFLAGS} #{test["cflags"]} -c #{src} -o #{object_file(src)}"
+        link = true
+      end
     end
-  end
 
-  if link
-    FileUtils.mkdir_p(local("bin"))
+    if link
+      FileUtils.mkdir_p(local("bin"))
 
-    objects = test["files"].map { |src| object_file(src) }
-    sh "#{CC} #{LDFLAGS} -o #{bin_output(test["output"])} #{objects.join(" ")}"
+      objects = test["files"].map { |src| object_file(src) }
+      sh "#{CC} #{LDFLAGS} -o #{bin_output(test["output"])} #{objects.join(" ")}"
+    end
+  rescue
+    puts "[ERROR] Building of test #{test["output"]} failed"
   end
 end
 
