--- a/fitin/Makefile.am
+++ b/fitin/Makefile.am
@@ -2,9 +2,7 @@ include $(top_srcdir)/Makefile.tool.am
 
 EXTRA_DIST = docs/fi-manual.xml
 
-SUBDIRS = lua . tests
-
-pkginclude_HEADERS = fitin.h fi_reg.h fi_client.h
+pkginclude_HEADERS = fi_client.h
 
 #----------------------------------------------------------------------------
 # fitin-<platform>
@@ -15,20 +13,20 @@ if VGCONF_HAVE_PLATFORM_SEC
 noinst_PROGRAMS += fitin-@VGCONF_ARCH_SEC@-@VGCONF_OS@
 endif
 
-FITIN_SOURCES_COMMON = fi_main.c fi_reg.c
+FITIN_SOURCES_COMMON = fi_main.c fi_reg.c lua/src/llex.c lua/src/lapi.c lua/src/lundump.c lua/src/ltm.c lua/src/lstate.c lua/src/lopcodes.c lua/src/lauxlib.c lua/src/loadlib.c lua/src/lbitlib.c lua/src/ldo.c lua/src/lcode.c lua/src/ldebug.c lua/src/lmathlib.c lua/src/lvm.c lua/src/lstring.c lua/src/lmem.c lua/src/lctype.c lua/src/ldblib.c lua/src/liolib.c lua/src/lfunc.c lua/src/ldump.c lua/src/lzio.c lua/src/loslib.c lua/src/ltable.c lua/src/lobject.c lua/src/linit.c lua/src/lbaselib.c lua/src/lparser.c lua/src/ltablib.c lua/src/lgc.c lua/src/lcorolib.c lua/src/lstrlib.c
 
 fitin_@VGCONF_ARCH_PRI@_@VGCONF_OS@_SOURCES      = \
 	$(FITIN_SOURCES_COMMON)
 fitin_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CPPFLAGS     = \
 	$(AM_CPPFLAGS_@VGCONF_PLATFORM_PRI_CAPS@)
 fitin_@VGCONF_ARCH_PRI@_@VGCONF_OS@_CFLAGS       = \
-	$(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) -DFITIN_WITH_LUA=1 -Ilua/install/include
+	$(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) -DFITIN_WITH_LUA=1 -Ilua/src
 fitin_@VGCONF_ARCH_PRI@_@VGCONF_OS@_DEPENDENCIES = \
 	$(TOOL_DEPENDENCIES_@VGCONF_PLATFORM_PRI_CAPS@)
 fitin_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LDADD        = \
 	$(TOOL_LDADD_@VGCONF_PLATFORM_PRI_CAPS@)
 fitin_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LDFLAGS      = \
-	$(TOOL_LDFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) -Llua/install/lib -llua
+	$(TOOL_LDFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) 
 fitin_@VGCONF_ARCH_PRI@_@VGCONF_OS@_LINK = \
 	$(top_builddir)/coregrind/link_tool_exe_@VGCONF_OS@ \
 	@VALT_LOAD_ADDRESS_PRI@ \
@@ -40,7 +38,7 @@ if VGCONF_HAVE_PLATFORM_SEC
 fitin_@VGCONF_ARCH_SEC@_@VGCONF_OS@_SOURCES      = \
 	$(FITIN_SOURCES_COMMON)
 fitin_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CPPFLAGS     = \
-	$(AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
+	$(AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@) -DFITIN_WITH_LUA=1 -Ilua/src
 fitin_@VGCONF_ARCH_SEC@_@VGCONF_OS@_CFLAGS       = \
 	$(AM_CFLAGS_@VGCONF_PLATFORM_SEC_CAPS@)
 fitin_@VGCONF_ARCH_SEC@_@VGCONF_OS@_DEPENDENCIES = \
