FITIn: adds a bunch of libc-workarounds to Lua

--- a/fitin/Makefile.am
+++ b/fitin/Makefile.am
@@ -13,7 +13,7 @@ if VGCONF_HAVE_PLATFORM_SEC
 noinst_PROGRAMS += fitin-@VGCONF_ARCH_SEC@-@VGCONF_OS@
 endif
 
-FITIN_SOURCES_COMMON = fi_main.c fi_reg.c lua/src/llex.c lua/src/lapi.c lua/src/lundump.c lua/src/ltm.c lua/src/lstate.c lua/src/lopcodes.c lua/src/lauxlib.c lua/src/loadlib.c lua/src/lbitlib.c lua/src/ldo.c lua/src/lcode.c lua/src/ldebug.c lua/src/lmathlib.c lua/src/lvm.c lua/src/lstring.c lua/src/lmem.c lua/src/lctype.c lua/src/ldblib.c lua/src/liolib.c lua/src/lfunc.c lua/src/ldump.c lua/src/lzio.c lua/src/loslib.c lua/src/ltable.c lua/src/lobject.c lua/src/linit.c lua/src/lbaselib.c lua/src/lparser.c lua/src/ltablib.c lua/src/lgc.c lua/src/lcorolib.c lua/src/lstrlib.c
+FITIN_SOURCES_COMMON = fi_main.c fi_reg.c lua_vg.c lua/src/llex.c lua/src/lapi.c lua/src/lundump.c lua/src/ltm.c lua/src/lstate.c lua/src/lopcodes.c lua/src/lauxlib.c lua/src/loadlib.c lua/src/lbitlib.c lua/src/ldo.c lua/src/lcode.c lua/src/ldebug.c lua/src/lmathlib.c lua/src/lvm.c lua/src/lstring.c lua/src/lmem.c lua/src/lctype.c lua/src/ldblib.c lua/src/liolib.c lua/src/lfunc.c lua/src/ldump.c lua/src/lzio.c lua/src/loslib.c lua/src/ltable.c lua/src/lobject.c lua/src/linit.c lua/src/lbaselib.c lua/src/lparser.c lua/src/ltablib.c lua/src/lgc.c lua/src/lcorolib.c lua/src/lstrlib.c
 
 fitin_@VGCONF_ARCH_PRI@_@VGCONF_OS@_SOURCES      = \
 	$(FITIN_SOURCES_COMMON)
